apps/data-platform/k8s/data-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-api
  namespace: data-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: data-api
          image: ghcr.io/elmed05/data-platform-api:0.2.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
